@@ -1,5 +1,11 @@
 2006-12-06  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 
 
+	* unichrome/via_dri.c: (viaDRIFBMemcpy), (viaDRIOffscreenSave):
+
+	Fix up previous commit for > 16MB sizes. 
+
+2006-12-06  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 
+
 	* unichrome/via_dri.c: (viaDRIOffscreenSave),
 	(viaDRIOffscreenRestore):
 	* unichrome/via_driver.c: (VIAEnterVT), (VIALeaveVT):
